--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ sysinfo.txt
 *.unitypackage
 
 # Exclude specific log files from 6v6Shooter
-6v6Shooter/Logs/AssetImportWorker0-prev
-6v6Shooter/Logs/AssetImportWorker1-prev
+6v6Shooter/Logs/AssetImportWorker0-prev.log
+6v6Shooter/Logs/AssetImportWorker1-prev.log
+6v6Shooter/Logs/AssetImportWorker1.log
+6v6Shooter/Logs/AssetImportWorker0.log
 6v6Shooter/Logs/shadercompiler-UnityShaderCompiler.exe
