--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "6v6Shooter.sln"
+    "dotnet.defaultSolution": "6v6-Shooter.sln"
 }
