Fixed issue with log files

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,11 @@ sysinfo.txt
 *.apk
 *.unitypackage
 
-# Exclude specific log files from 6v6Shooter
-6v6Shooter/Logs/AssetImportWorker0-prev
-6v6Shooter/Logs/AssetImportWorker1-prev
-6v6Shooter/Logs/shadercompiler-UnityShaderCompiler.exe
+# Exclude specific log files from unity
+Logs/AssetImportWorker0-prev
+Logs/AssetImportWorker1-prev
+Logs/shadercompiler-UnityShaderCompiler.exe
+Logs/AssetImportWorker0.log
+Logs/AssetImportWorker1.log
+Logs/shadercompiler-AssetImportWorker0.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
