Removed log files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,8 +82,12 @@ sysinfo.txt
 *.unitypackage
 
 # Exclude specific log files from 6v6Shooter
-6v6Shooter/Logs/AssetImportWorker0-prev.log
-6v6Shooter/Logs/AssetImportWorker1-prev.log
-6v6Shooter/Logs/AssetImportWorker1.log
-6v6Shooter/Logs/AssetImportWorker0.log
-6v6Shooter/Logs/shadercompiler-UnityShaderCompiler.exe
+Logs/AssetImportWorker0-prev.log
+Logs/AssetImportWorker1-prev.log
+Logs/AssetImportWorker1.log
+Logs/AssetImportWorker0.log
+Logs/shadercompiler-UnityShaderCompiler.exe
+Logs/AssetImportWorker0.log
+Logs/AssetImportWorker1.log
+Logs/shadercompiler-AssetImportWorker0.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
