Added health controller and system setup for it

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ Logs/AssetImportWorker0.log
 Logs/AssetImportWorker1.log
 Logs/shadercompiler-AssetImportWorker0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
+
+# Add the conflicted file path
+UserSettings\Layouts\default-2022.dwlt
