Major change in bullet spawning
- Altered bulletcontroller
- Added line render
- Altered weaponmanager
- Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,5 @@ Logs/AssetImportWorker0.log
 Logs/AssetImportWorker1.log
 Logs/shadercompiler-AssetImportWorker0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
+UserSettings/Layouts/default-2022.dwlt
 
-# Add the conflicted file path
-UserSettings\Layouts\default-2022.dwlt
