some ui logic not done yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "6v6-Shooter.sln"
+    "dotnet.defaultSolution": "6v6-Shooter.sln",
+    "dotnet.preferCSharpExtension": true
 }
