Added logs to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -92,4 +92,12 @@ Logs/AssetImportWorker1.log
 Logs/shadercompiler-AssetImportWorker0.log
 Logs/shadercompiler-UnityShaderCompiler.exe0.log
 UserSettings/Layouts/default-2022.dwlt
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Fog.mat
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Skybox.mat
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Stylized Clouds.mat
+Assets/Distant Lands/Cozy Weather/Contents/Resources/Materials/Reflection Cubemap.cubemap
+Assets/Distant Lands/Cozy Weather/Custom Render Pipelines/Import for Buto Integration.unitypackage.meta
+Assets/Distant Lands/Cozy Weather/Custom Render Pipelines/Import for URP.unitypackage.meta
+Assets/Scenes/ProductionScenes/S01_MainMenu.unity
+UserSettings/EditorUserSettings.asset
 
