--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,7 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "6v6-Shooter.sln",
+    "dotnet.defaultSolution": "6v6Shooter.sln",
     "C_Cpp.errorSquiggles": "enabled",
     "workbench.colorTheme": "Jewel (rainglow)",
     "workbench.preferredDarkColorTheme": "Box UK Light (rainglow)"
