--- a/.gitignore
+++ b/.gitignore
@@ -101,4 +101,29 @@ Assets/Distant Lands/Cozy Weather/Custom Render Pipelines/Import for URP.unitypa
 Assets/Scenes/ProductionScenes/S01_MainMenu.unity
 UserSettings/EditorUserSettings.asset
 
+### FMOD Unity Integration ###
+# Never ignore DLLs in the FMOD subfolder, so make sure that the FMOD-folder is in the correct path.
+!/[Aa]ssets/Plugins/FMOD/**/*.dll
+
+# Don't ignore images and gizmos used by FMOD in the Unity Editor
+!/[Aa}ssets/Gizmos/FMOD/*
+!/[Aa}ssets/Editor Default Resources/FMOD/*
+
+# Ignore the Cache-file since it is updated locally either way
+/[Aa]ssets/**/FMODStudioCache.asset
+/[Aa]ssets/**/FMODStudioCache.asset.meta
+/[Aa]ssets/Plugins/FMOD/Cache.meta
+/[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
+
+# Log-files
+fmod.log
 fmod_editor.log
+
+# FMOD 1.10.x (Legacy)
+/Assets/FMODAssets/*
+/Assets/FMODStudioCache.meta
+
+Assets/Distant Lands/Cozy Weather/Contents/Resources/Materials/Reflection Cubemap.cubemap
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Stylized Clouds.mat
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Fog.mat
+UserSettings/Layouts/default-2022.dwlt
