[ADD] fmod log to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ Assets/Distant Lands/Cozy Weather/Contents/Resources/Materials/Reflection Cubema
 Assets/Distant Lands/Cozy Weather/Contents/Materials/Stylized Clouds.mat
 Assets/Distant Lands/Cozy Weather/Contents/Materials/Fog.mat
 UserSettings/Layouts/default-2022.dwlt
+fmod_editor.log
