[ADD] Prep for shooting sounds and etc

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ Assets/Distant Lands/Cozy Weather/Custom Render Pipelines/Import for URP.unitypa
 Assets/Scenes/ProductionScenes/S01_MainMenu.unity
 UserSettings/EditorUserSettings.asset
 
+fmod_editor.log
