[ADD] BulletDecal (assaultrifle bullets)

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ Assets/Distant Lands/Cozy Weather/Contents/Materials/Stylized Clouds.mat
 Assets/Distant Lands/Cozy Weather/Contents/Materials/Fog.mat
 UserSettings/Layouts/default-2022.dwlt
 fmod_editor.log
+Assets/Distant Lands/Cozy Weather/Contents/Resources/Materials/Reflection Cubemap.cubemap
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Stylized Clouds.mat
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Skybox.mat
+Assets/Distant Lands/Cozy Weather/Contents/Materials/Fog.mat
